--- a/Notebooks/Change_File_Name_Format.ipynb
+++ b/Notebooks/Change_File_Name_Format.ipynb
@@ -8,19 +8,17 @@
     "# Change File Names and File Formats of Aiforia Output Files\n",
     "\n",
     "## Purpose\n",
-    "This code processes the raw output files from Aiforia (typically Excel, CSV, or ZIP files) and converts them into the required format (Excel, CSV, or Feather, depending on the case). It also renames each file based on the value in cell A2 (the first cell in the first non-header row). The resulting files are then used in other notebooks for further analysis.\n",
+    "This code processes the raw output files from Aiforia (typically CSV, TSV or Excel or ZIP files) and converts them into the required format (CSV, TSV or Excel or Feather, depending on the case). It also renames each file based on the value in the first cell of the 'Image' column. The resulting files are then used in other notebooks for further analysis.\n",
     "\n",
-    "* Part 1: The code **renames** all Aiforia output Excel or CSV files in the specified folder using the value in cell cell A2 (e.g. “131342-1_Bl6_GFP_NeuN_S1”). The file format (CSV or Excel) remains unchanged.\n",
+    "* Part 1: The code **renames** all Aiforia output CSV, TSV or Excel files in the specified folder using the value in the first cell of the 'Image' column (e.g. “131342-1_Bl6_GFP_NeuN_S1”). The file format (CSV, TSV or Excel) remains unchanged.\n",
     "\n",
-    "* Part 2: The code **removes the prefix “IA_details_”** from the names of all Aiforia output Excel or CSV files in the specified folder. The file format (CSV or Excel) remains unchanged.\n",
+    "* Part 2: The code **removes the prefix “IA_details_”** from the names of all Aiforia output CSV, TSV or Excel files in the specified folder. The file format (CSV, TSV or Excel) remains unchanged.\n",
     "\n",
-    "* Part 3: The code iterates over all Excel files in the specified folder and **converts them into tab-separated CSV files**. Each CSV file is named according to the value in cell A2.\n",
+    "* Part 3: The code iterates over all Excel files in the specified folder and **converts them into tab-separated CSV files**. Each CSV file is named according to the value in the first cell of the 'Image' column.\n",
     "\n",
-    "* Part 4: The code iterates over all Excel files in the specified folder and **converts them into Feather files using pandas**. Each Feather file is named according to the value in cell A2.\n",
+    "* Part 4: The code iterates over all Excel files in the specified folder and **converts them into Feather files using pandas**. Each Feather file is named according to the value in the first cell of the 'Image' column.\n",
     "\n",
-    "* Part 5: Depending on the Aiforia download procedure, the output may be provided as **ZIP files containing Excel files**. For each ZIP file in the specified folder, the code extracts the desired Excel file (IA_details.xlsx), renames it using the value in cell A2, and moves it to the folder that originally contained the ZIP files.\n",
-    "\n",
-    "* Part 6: Depending on the Aiforia download procedure, the output may be provided as **ZIP files containing CSV files**. For each ZIP file in the specified folder, the code extracts the desired CSV file (IA_details.csv), renames it using the value in cell A2, and moves it to the folder that originally contained the ZIP files."
+    "* Part 5: Depending on the Aiforia download procedure, the output may be provided as **ZIP files containing CSV, TSV or Excel files**. For each ZIP file in the specified folder, the code extracts the desired file named IA_details.xxx (where xxx is the file extension), renames it using the value in the first cell of the 'Image' column, and moves it to the folder that originally contained the ZIP files, while preserving the original file extension."
    ]
   },
   {
@@ -28,7 +26,7 @@
    "id": "6136c0fe",
    "metadata": {},
    "source": [
-    "## Part 1 - Rename Excel/CSV Files Based on Cell A2 (Keep Original Format)"
+    "## Part 1 - Rename CSV / TSV / Excel Files Based on the first cell of the 'Image' column (Keep Original Format)"
    ]
   },
   {
@@ -38,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the folder where all Excel or CSV files are located\n",
+    "# Specify the folder where all CSV, TSV or Excel files are located\n",
     "folder_old_names = r'C:\\Users\\...\\Raw_data'\n"
    ]
   },
@@ -53,8 +51,11 @@
     "import glob\n",
     "import pandas as pd\n",
     "\n",
-    "file_patterns = [os.path.join(folder_old_names, \"*.csv\"),\n",
-    "                 os.path.join(folder_old_names, \"*.xlsx\")]\n",
+    "file_patterns = [\n",
+    "    os.path.join(folder_old_names, \"*.csv\"),\n",
+    "    os.path.join(folder_old_names, \"*.tsv\"),\n",
+    "    os.path.join(folder_old_names, \"*.xlsx\")\n",
+    "]\n",
     "all_files = [f for pattern in file_patterns for f in glob.glob(pattern)]\n",
     "\n",
     "for file_path in all_files:\n",
@@ -62,7 +63,7 @@
     "    \n",
     "    # Read the 'Image' column\n",
     "    try:\n",
-    "        if ext == \".csv\":\n",
+    "        if ext in (\".csv\", \".tsv\"):\n",
     "            df = pd.read_csv(file_path, sep='\\t', usecols=['Image'], dtype=str, nrows=1)\n",
     "        elif ext == \".xlsx\":\n",
     "            df = pd.read_excel(file_path, usecols=['Image'], dtype=str, nrows=1)\n",
@@ -97,7 +98,7 @@
    "id": "c6d55a67-36f3-4118-bd05-6a63b3042f0a",
    "metadata": {},
    "source": [
-    "## Part 2 - Remove 'IA_details_' Prefix from Excel/CSV File Names (Keep Original Format)"
+    "## Part 2 - Remove 'IA_details_' Prefix from CSV / TSV / Excel File Names (Keep Original Format)"
    ]
   },
   {
@@ -107,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the folder where all Excel or CSV files are located\n",
+    "# Specify the folder where all CSV, TSV or Excel files are located\n",
     "folder_old_names = r'C:\\Users\\...\\Raw_data'"
    ]
   },
@@ -123,8 +124,11 @@
     "import glob\n",
     "\n",
     "# Get all CSV and Excel files in the folder\n",
-    "file_patterns = [os.path.join(folder_old_names, \"*.csv\"),\n",
-    "                 os.path.join(folder_old_names, \"*.xlsx\")]\n",
+    "file_patterns = [\n",
+    "    os.path.join(folder_old_names, \"*.csv\"),\n",
+    "    os.path.join(folder_old_names, \"*.tsv\"),\n",
+    "    os.path.join(folder_old_names, \"*.xlsx\")\n",
+    "]\n",
     "all_files = [f for pattern in file_patterns for f in glob.glob(pattern)]\n",
     "\n",
     "for file_path in all_files:\n",
@@ -145,7 +149,7 @@
    "id": "60fc16cd",
    "metadata": {},
    "source": [
-    "## Part 3 - Convert Excel Files to CSV and Rename Based on Cell A2"
+    "## Part 3 - Convert Excel Files to CSV and Rename Based on the first cell of the 'Image' column"
    ]
   },
   {
@@ -155,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the folder where all Excel or CSV files are located\n",
-    "folder_old_xslx_names = r'C:\\Users\\...\\Raw_data'"
+    "# Specify the folder where all Excel files are located\n",
+    "folder_old_xlsx_names = r'C:\\Users\\...\\Raw_data'"
    ]
   },
   {
@@ -171,7 +175,7 @@
     "import os\n",
     "import glob\n",
     "\n",
-    "all_xlsx_files = glob.glob(os.path.join(folder_old_xslx_names, \"*.xlsx\"))\n",
+    "all_xlsx_files = glob.glob(os.path.join(folder_old_xlsx_names, \"*.xlsx\"))\n",
     "\n",
     "for file_path in all_xlsx_files:\n",
     "    try:\n",
@@ -185,9 +189,9 @@
     "        print(f\"⚠️ No value found in 'Image' column for {file_path}\")\n",
     "        continue\n",
     "\n",
-    "    # Extract new file name from cell A2\n",
+    "    # Extract new file name from the first cell of the 'Image' column\n",
     "    new_file_name = df['Image'].iloc[0].strip()\n",
-    "    new_file_path = os.path.join(folder_old_xslx_names, f\"{new_file_name}.csv\")\n",
+    "    new_file_path = os.path.join(folder_old_xlsx_names, f\"{new_file_name}.csv\")\n",
     "\n",
     "    # Convert Excel to tab-separated CSV\n",
     "    full_df = pd.read_excel(file_path)  # Read full Excel for conversion\n",
@@ -201,7 +205,7 @@
    "id": "e358205a",
    "metadata": {},
    "source": [
-    "## Part 4 - Convert Excel Files to Feather Format and Rename Based on Cell A2"
+    "## Part 4 - Convert Excel Files to Feather Format and Rename Based on the first cell of the 'Image' column"
    ]
   },
   {
@@ -211,8 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the folder where all Excel or CSV files are located\n",
-    "folder_old_xslx_names = r'C:\\Users\\...\\Raw_data'"
+    "# Specify the folder where all Excel files are located\n",
+    "folder_old_xlsx_names = r'C:\\Users\\...\\Raw_data'"
    ]
   },
   {
@@ -227,7 +231,7 @@
     "import os\n",
     "import glob\n",
     "\n",
-    "all_xlsx_files = glob.glob(os.path.join(folder_old_xslx_names, \"*.xlsx\"))\n",
+    "all_xlsx_files = glob.glob(os.path.join(folder_old_xlsx_names, \"*.xlsx\"))\n",
     "\n",
     "columns = ['Image', 'Parent area name', 'Area/object name', 'Class label',\n",
     "           'Class confidence (%)', 'Area (μm²)', 'Circumference (µm)']\n",
@@ -245,9 +249,9 @@
     "        print(f\"⚠️ No value found in 'Image' column for {file_path}\")\n",
     "        continue\n",
     "\n",
-    "    # Extract new file name from cell A2\n",
+    "    # Extract new file name from the first cell of the 'Image' column\n",
     "    new_file_name = str(df['Image'].iloc[0]).strip()\n",
-    "    new_file_path = os.path.join(folder_old_xslx_names, f\"{new_file_name}.feather\")\n",
+    "    new_file_path = os.path.join(folder_old_xlsx_names, f\"{new_file_name}.feather\")\n",
     "\n",
     "    # Convert Excel to Feather\n",
     "    df.to_feather(new_file_path)\n",
@@ -259,7 +263,7 @@
    "id": "aa3f6047",
    "metadata": {},
    "source": [
-    "## Part 5 - Extract Excel Files from ZIPs and Rename Based on Cell A2"
+    "## Part 5 - Extract CSV / TSV / Excel Files from ZIPs and Rename Based on the first cell of the 'Image' column"
    ]
   },
   {
@@ -293,14 +297,22 @@
     "    with ZipFile(zip_path, 'r') as zip_file:\n",
     "        # Loop over all files in the ZIP\n",
     "        for member in zip_file.namelist():\n",
-    "            if member.endswith('.xlsx') and 'IA_details' in member:\n",
-    "                # Extract Excel file to the folder\n",
+    "            if 'IA_details' in member:\n",
+    "                ext = os.path.splitext(member)[1].lower()\n",
+    "\n",
+    "                # Extract file to the folder\n",
     "                zip_file.extract(member, path=folder_zip_files)\n",
     "                extracted_path = os.path.join(folder_zip_files, os.path.basename(member))\n",
     "\n",
-    "                # Read Excel to get new name from cell A2\n",
+    "                # Read IA_details CSV / TSV / Excel file to get new name from the first cell of the 'Image' column\n",
     "                try:\n",
-    "                    df = pd.read_excel(extracted_path, usecols=['Image'], dtype=str, nrows=1)\n",
+    "                    if ext in (\".csv\", \".tsv\"):\n",
+    "                        df = pd.read_csv(extracted_path, sep='\\t', usecols=['Image'], dtype=str, nrows=1)\n",
+    "                    elif ext == \".xlsx\":\n",
+    "                        df = pd.read_excel(extracted_path, usecols=['Image'], dtype=str, nrows=1)\n",
+    "                    else:\n",
+    "                        print(f\"Skipping unsupported file type: {extracted_path}\")\n",
+    "                        continue\n",
     "                except ValueError as e:\n",
     "                    print(f\"⚠️ Could not read 'Image' column in {extracted_path}: {e}\")\n",
     "                    continue\n",
@@ -309,77 +321,18 @@
     "                    print(f\"⚠️ No value found in 'Image' column for {extracted_path}\")\n",
     "                    continue\n",
     "\n",
-    "                # Construct new file path\n",
+    "                # Extract new name and construct new path\n",
     "                new_file_name = df['Image'].iloc[0].strip()\n",
-    "                new_file_path = os.path.join(folder_zip_files, f\"{new_file_name}.xlsx\")\n",
+    "                new_file_path = os.path.join(folder_zip_files, f\"{new_file_name}{ext}\")\n",
+    "\n",
+    "                # Handle potential naming conflicts\n",
+    "                if os.path.exists(new_file_path):\n",
+    "                    print(f\"⚠️ Skipping: {new_file_name}{ext} already exists.\")\n",
+    "                    continue\n",
     "\n",
     "                # Rename the extracted file\n",
     "                os.rename(extracted_path, new_file_path)\n",
-    "                print(f\"✅ Extracted and renamed: {os.path.basename(zip_path)} → {new_file_name}.xlsx\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b661b417-5cbe-434f-bf64-c7ab481aa6b3",
-   "metadata": {},
-   "source": [
-    "## Part 6 - Extract CSV Files from ZIPs and Rename Based on Cell A2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ddda727-31b5-4371-a2d5-1b030df99a7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Specify the folder where all ZIP files are located\n",
-    "folder_zip_files = r'C:\\Users\\...\\Raw_data'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b39e3d41-7a58-4034-b705-290a19c7f2fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import glob\n",
-    "from zipfile import ZipFile\n",
-    "\n",
-    "# Get all ZIP files in the folder\n",
-    "all_zip_files = glob.glob(os.path.join(folder_zip_files, \"*.zip\"))\n",
-    "\n",
-    "for zip_path in all_zip_files:\n",
-    "    with ZipFile(zip_path, 'r') as zip_file:\n",
-    "        # Loop over all files in the ZIP\n",
-    "        for member in zip_file.namelist():\n",
-    "            if member.endswith('.csv') and 'IA_details' in member:\n",
-    "                # Extract CSV to the folder\n",
-    "                zip_file.extract(member, path=folder_zip_files)\n",
-    "                extracted_path = os.path.join(folder_zip_files, os.path.basename(member))\n",
-    "\n",
-    "                # Read CSV to get new name from cell A2 ('Image' column)\n",
-    "                try:\n",
-    "                    df = pd.read_csv(extracted_path, sep='\\t', usecols=['Image'], dtype=str, nrows=1)\n",
-    "                except ValueError as e:\n",
-    "                    print(f\"⚠️ Could not read 'Image' column in {extracted_path}: {e}\")\n",
-    "                    continue\n",
-    "\n",
-    "                if df.empty or df['Image'].iloc[0] is None:\n",
-    "                    print(f\"⚠️ No value found in 'Image' column for {extracted_path}\")\n",
-    "                    continue\n",
-    "\n",
-    "                # Construct new file path\n",
-    "                new_file_name = df['Image'].iloc[0].strip()\n",
-    "                new_file_path = os.path.join(folder_zip_files, f\"{new_file_name}.csv\")\n",
-    "\n",
-    "                # Rename the extracted file\n",
-    "                os.rename(extracted_path, new_file_path)\n",
-    "                print(f\"✅ Extracted and renamed: {os.path.basename(zip_path)} → {new_file_name}.csv\")\n"
+    "                print(f\"✅ Extracted and renamed: {os.path.basename(zip_path)} → {new_file_name}{ext}\")\n"
    ]
   }
  ],
