--- a/Notebooks/DCD_Dopaminergic_Cell_Detector_Analysis.ipynb
+++ b/Notebooks/DCD_Dopaminergic_Cell_Detector_Analysis.ipynb
@@ -5,10 +5,10 @@
    "id": "e8160eb4",
    "metadata": {},
    "source": [
-    "# Analysis of Aiforia Dopaminergic TH Cell Detector \n",
+    "# Analysis of Aiforia Dopaminergic Cell Detector Output (TH+ Cells) \n",
     "\n",
     "## Part 0 - Outline\n",
-    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Dopaminergic (TH) Cell Detector”. The data are stored in a local folder on the computer, specified within the code. We typically start with Excel files. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
+    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Dopaminergic Cell Detector”. The data are stored in a local folder on the computer, specified within the code. The supported file formats are CSV, TSV, Excel and feather. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
     "This notebook is organized into three sections:\n",
     "\n",
     "**1) Define Functions for Part 2 & 3**\n",
@@ -80,7 +80,7 @@
     "\n",
     "Specify the following paths before running the analysis:\n",
     "\n",
-    "1) **Raw data format:** choose the file format of the raw data (e.g.: excel, csv).\n",
+    "1) **Raw data format:** choose the file format of the raw data (csv, tsv, xlsx or feather).\n",
     "2) **Some experimental parameters:** spacing between sections and section thickness.\n",
     "3) **Raw data folder:** the folder containing the original data files exported from Aiforia.\n",
     "4) **Results folders:** the folders where the Excel files with processed results will be saved.\n",
@@ -96,10 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify what data format you want to use for your raw data: excel, csv or feather. Do this by uncommenting the data_format that you want.\n",
-    "# data_format = 'excel'\n",
+    "# Specify what data format you want to use for your raw data: csv, tsv, xlsx or feather. Do this by uncommenting the data_format that you want.\n",
     "data_format = 'csv'\n",
+    "# data_format = 'tsv'\n",
+    "# data_format = 'xlsx'\n",
     "# data_format = 'feather'\n",
+    "\n",
     "\n",
     "# Specify the experimental parameters (section_thickness in micrometers!!) \n",
     "spacing=5\n",
@@ -152,7 +154,7 @@
     "    folder_raw_data : str\n",
     "        Path to the folder containing raw data files.\n",
     "    data_format : str\n",
-    "        Format of the raw data files ('excel', 'csv', or 'feather').\n",
+    "        Format of the raw data files ('csv', 'tsv', 'xlsx' or 'feather').\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -161,15 +163,17 @@
     "    \"\"\"\n",
     "    \n",
     "    # Determine the file pattern based on the data format\n",
-    "    if data_format == 'excel':\n",
-    "        pattern = \"*.xlsx\"\n",
-    "    elif data_format == 'csv':\n",
+    "    if data_format == 'csv':\n",
     "        pattern = \"*.csv\"\n",
+    "    elif data_format == 'tsv':\n",
+    "        pattern = \"*.tsv\"\n",
+    "    elif data_format == 'xlsx':\n",
+    "        pattern = \"*.xlsx\"\n",
     "    elif data_format == 'feather':\n",
     "        pattern = \"*.feather\"\n",
     "    else:\n",
     "        raise ValueError(\n",
-    "            \"Invalid data format specified. Please set 'data_format' to 'excel', 'csv', or 'feather'.\"\n",
+    "            \"Invalid data format specified. Please set 'data_format' to 'csv', 'tsv', 'xlsx' or 'feather'.\"\n",
     "        )\n",
     "    \n",
     "    # Get all matching files and sort them\n",
@@ -324,7 +328,7 @@
     "    df_brainregions_to_replace : pd.DataFrame\n",
     "        DataFrame specifying which brain regions need to be replaced for each image.\n",
     "    data_format : str\n",
-    "        Format of the raw data file: 'excel', 'csv', or 'feather'.\n",
+    "        Format of the raw data file: 'csv', 'tsv', 'xlsx' or 'feather'.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -347,15 +351,15 @@
     "        'Circumference (µm)': 'float64'\n",
     "    }\n",
     "    \n",
-    "    if data_format == 'excel':\n",
-    "        df = pd.read_excel(file_location, usecols=columns, dtype=dtypes, keep_default_na=True)\n",
-    "    elif data_format == 'csv':\n",
-    "        df = pd.read_csv(file_location, sep='\\t', usecols=columns, dtype=dtypes, keep_default_na=True)\n",
+    "    if data_format == 'xlsx':\n",
+    "        df = pd.read_excel(file_location, usecols=columns, dtype=dtypes, index_col=False, keep_default_na=True)\n",
+    "    elif data_format in ('csv', 'tsv'):    \n",
+    "        df = pd.read_csv(file_location, sep='\\t', usecols=columns, dtype=dtypes, index_col=False, keep_default_na=True)\n",
     "    elif data_format == 'feather':\n",
     "        df = pd.read_feather(file_location)\n",
     "        df = df.astype(dtypes)  # Ensure proper types\n",
     "    else:\n",
-    "        raise ValueError(\"Invalid data format. Choose 'excel', 'csv', or 'feather'.\")\n",
+    "        raise ValueError(\"Invalid data format. Choose 'csv', 'tsv', 'xlsx' or 'feather'.\")\n",
     "\n",
     "    # ------------------------\n",
     "    # Extract image name from file name\n",
