--- a/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
+++ b/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
@@ -5,10 +5,10 @@
    "id": "e8160eb4",
    "metadata": {},
    "source": [
-    "# Analysis of Aiforia Microglia IBA1\n",
+    "# Analysis of Aiforia Microglia Cell Detector Output (IBA1)\n",
     "\n",
     "## Part 0 - Outline\n",
-    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Microglial (IBA1) Activation Detector”. The data are stored in a local folder on the computer, specified within the code. We typically start with CSV files. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
+    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Microglial (IBA1) Cell Detector”. The data are stored in a local folder on the computer, specified within the code. The supported file formats are CSV, TSV, Excel and feather. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
     "This notebook is organized into three sections:\n",
     "\n",
     "**1) Define Functions for Part 2 & 3**\n",
@@ -79,7 +79,7 @@
     "\n",
     "Specify the following paths before running the analysis:\n",
     "\n",
-    "1) **Raw data format:** choose the file format of the raw data (e.g.: excel, csv).\n",
+    "1) **Raw data format:** choose the file format of the raw data (csv, tsv, xlsx or feather).\n",
     "2) **Some experimental parameters:** spacing between sections and section thickness.\n",
     "3) **Raw data folder:** the folder containing the original data files exported from Aiforia.\n",
     "4) **Results folders:** the folders where the Excel files with processed results will be saved.\n",
@@ -95,9 +95,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify what data format you want to use for your raw data: excel, csv or feather. Do this by uncommenting the data_format that you want.\n",
+    "# Specify what data format you want to use for your raw data: csv, tsv, xlsx or feather. Do this by uncommenting the data_format that you want.\n",
     "data_format = 'csv'\n",
-    "# data_format = 'excel'\n",
+    "# data_format = 'tsv'\n",
+    "# data_format = 'xlsx'\n",
     "# data_format = 'feather'\n",
     "\n",
     "# Specify the maximum number of slides per brain. For example, if set to 4, filenames should include '_S1', '_S2', '_S3', and '_S4'. \n",
@@ -162,7 +163,7 @@
     "    folder_raw_data : str\n",
     "        Path to the folder containing raw data files.\n",
     "    data_format : str\n",
-    "        Format of the raw data files ('excel', 'csv', or 'feather').\n",
+    "        Format of the raw data files ('csv', 'tsv', 'xlsx' or 'feather').\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -171,15 +172,17 @@
     "    \"\"\"\n",
     "\n",
     "    # Determine the file pattern based on the data format\n",
-    "    if data_format == 'excel':\n",
-    "        pattern = \"*.xlsx\"\n",
-    "    elif data_format == 'csv':\n",
+    "    if data_format == 'csv':\n",
     "        pattern = \"*.csv\"\n",
+    "    elif data_format == 'tsv':\n",
+    "        pattern = \"*.tsv\"\n",
+    "    elif data_format == 'xlsx':\n",
+    "        pattern = \"*.xlsx\"\n",
     "    elif data_format == 'feather':\n",
     "        pattern = \"*.feather\"\n",
     "    else:\n",
     "        raise ValueError(\n",
-    "            \"Invalid data format specified. Please set 'data_format' to 'excel', 'csv', or 'feather'.\"\n",
+    "            \"Invalid data format specified. Please set 'data_format' to 'csv', 'tsv', 'xlsx' or 'feather'.\"\n",
     "        )\n",
     "\n",
     "    # Retrieve and sort all matching raw data files\n",
@@ -343,7 +346,7 @@
     "    df_brainregions_to_replace : pd.DataFrame\n",
     "        DataFrame specifying which brain regions need to be replaced for each image.\n",
     "    data_format : str\n",
-    "        Format of the raw data file: 'excel', 'csv', or 'feather'.\n",
+    "        Format of the raw data file: 'csv', 'tsv', 'xlsx' or 'feather'.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -371,22 +374,22 @@
     "    # Load or create the data file\n",
     "    # ------------------------\n",
     "    try:\n",
-    "        if data_format == 'csv':\n",
-    "            df = pd.read_csv(file_location, sep='\\t', usecols=columns, dtype=dtypes, keep_default_na=True)\n",
-    "        elif data_format == 'excel':\n",
-    "            df = pd.read_excel(file_location, usecols=columns, dtype=dtypes, keep_default_na=True)\n",
+    "        if data_format in ('csv', 'tsv'):\n",
+    "            df = pd.read_csv(file_location, sep='\\t', usecols=columns, dtype=dtypes, index_col=False, keep_default_na=True)\n",
+    "        elif data_format == 'xlsx':\n",
+    "            df = pd.read_excel(file_location, usecols=columns, dtype=dtypes, index_col=False, keep_default_na=True)\n",
     "        elif data_format == 'feather':\n",
     "            df = pd.read_feather(file_location).astype(dtypes)\n",
     "        else:\n",
-    "            raise ValueError(\"Invalid data format. Choose 'excel', 'csv', or 'feather'.\")\n",
+    "            raise ValueError(\"Invalid data format. Choose 'csv', 'tsv', 'xlsx' or 'feather'.\")\n",
     "    except FileNotFoundError:\n",
     "        # If file doesn't exist, create an empty one and reload\n",
     "        df_empty = pd.DataFrame(columns=columns)\n",
     "        df_empty.reset_index(inplace=True)\n",
-    "        if data_format == 'csv':\n",
+    "        if data_format in ('csv', 'tsv'):\n",
     "            df_empty.to_csv(file_location, sep='\\t', index=False)\n",
     "            df = pd.read_csv(file_location, sep='\\t', usecols=columns, dtype=dtypes)\n",
-    "        elif data_format == 'excel':\n",
+    "        elif data_format == 'xlsx':\n",
     "            df_empty.to_excel(file_location, index=False)\n",
     "            df = pd.read_excel(file_location, usecols=columns, dtype=dtypes)\n",
     "        elif data_format == 'feather':\n",
