Changed introduction text

--- a/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
+++ b/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
@@ -8,7 +8,7 @@
     "# Analysis of Aiforia Microglia Cell Detector Output (IBA1)\n",
     "\n",
     "## Part 0 - Outline\n",
-    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Microglial (IBA1) Cell Detector”. The data are stored in a local folder on the computer, specified within the code. The supported file formats are CSV, TSV, Excel and feather. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
+    "This code handles the automatic processing of raw data from mouse brains analyzed using the Aiforia model “Microglial Cell Detector”. The data are stored in a local folder on the computer, specified within the code. The supported file formats are CSV, TSV, Excel and feather. To automatically change the format of multiple files, please refer to the notebook Change_Name_Format_Input_Data.ipynb.\n",
     "This notebook is organized into three sections:\n",
     "\n",
     "**1) Define Functions for Part 2 & 3**\n",
