Added index_col = False

--- a/Notebooks/Change_File_Name_Format.ipynb
+++ b/Notebooks/Change_File_Name_Format.ipynb
@@ -64,9 +64,9 @@
     "    # Read the 'Image' column\n",
     "    try:\n",
     "        if ext in (\".csv\", \".tsv\"):\n",
-    "            df = pd.read_csv(file_path, sep='\\t', usecols=['Image'], dtype=str, nrows=1)\n",
+    "            df = pd.read_csv(file_path, sep='\\t', usecols=['Image'], dtype=str, index_col = False, nrows=1)\n",
     "        elif ext == \".xlsx\":\n",
-    "            df = pd.read_excel(file_path, usecols=['Image'], dtype=str, nrows=1)\n",
+    "            df = pd.read_excel(file_path, usecols=['Image'], dtype=str, index_col = False, nrows=1)\n",
     "        else:\n",
     "            print(f\"Skipping unsupported file type: {file_path}\")\n",
     "            continue\n",
@@ -180,7 +180,7 @@
     "for file_path in all_xlsx_files:\n",
     "    try:\n",
     "        # Read Excel file\n",
-    "        df = pd.read_excel(file_path, usecols=['Image'], dtype=str, nrows=1)\n",
+    "        df = pd.read_excel(file_path, usecols=['Image'], dtype=str, index_col = False, nrows=1)\n",
     "    except ValueError as e:\n",
     "        print(f\"⚠️ Could not read 'Image' column in {file_path}: {e}\")\n",
     "        continue\n",
@@ -239,7 +239,7 @@
     "for file_path in all_xlsx_files:\n",
     "    try:\n",
     "        # Read all sheets and concatenate them\n",
-    "        sheet_dfs = pd.read_excel(file_path, sheet_name=None, usecols=columns)\n",
+    "        sheet_dfs = pd.read_excel(file_path, sheet_name=None, index_col = False, usecols=columns)\n",
     "        df = pd.concat(sheet_dfs.values(), ignore_index=True)\n",
     "    except ValueError as e:\n",
     "        print(f\"⚠️ Could not read Excel file {file_path}: {e}\")\n",
@@ -307,9 +307,9 @@
     "                # Read IA_details CSV / TSV / Excel file to get new name from the first cell of the 'Image' column\n",
     "                try:\n",
     "                    if ext in (\".csv\", \".tsv\"):\n",
-    "                        df = pd.read_csv(extracted_path, sep='\\t', usecols=['Image'], dtype=str, nrows=1)\n",
+    "                        df = pd.read_csv(extracted_path, sep='\\t', usecols=['Image'], dtype=str, index_col = False, nrows=1)\n",
     "                    elif ext == \".xlsx\":\n",
-    "                        df = pd.read_excel(extracted_path, usecols=['Image'], dtype=str, nrows=1)\n",
+    "                        df = pd.read_excel(extracted_path, usecols=['Image'], dtype=str, index_col = False, nrows=1)\n",
     "                    else:\n",
     "                        print(f\"Skipping unsupported file type: {extracted_path}\")\n",
     "                        continue\n",
