Filled calculations of missing regions with 0

--- a/Notebooks/DCD_Dopaminergic_Cell_Detector_Analysis.ipynb
+++ b/Notebooks/DCD_Dopaminergic_Cell_Detector_Analysis.ipynb
@@ -522,7 +522,7 @@
     "    groupby_column1 = 'Parent area name merged'\n",
     "    groupby_column2 = 'Area/object name merged'\n",
     "\n",
-    "    # Helper to compute groupbay + aggregation + renaming in one go\n",
+    "    # Helper to compute groupby + aggregation + renaming in one go\n",
     "    def group_stat(df, col, agg, target, new_name):\n",
     "        out = (\n",
     "            df.groupby(col, as_index=False)\n",
@@ -550,6 +550,10 @@
     "        df_avg_circularity,\n",
     "    ]\n",
     "    df_all = functools.reduce(lambda l, r: pd.merge(l, r, on='Merged area name', how='outer'), dfs)\n",
+    "\n",
+    "    # Replace NaN in numeric columns with 0\n",
+    "    numeric_cols = df_all.select_dtypes(include='number').columns\n",
+    "    df_all[numeric_cols] = df_all[numeric_cols].fillna(0)\n",
     "\n",
     "    # Derived metrics\n",
     "    df_all['Extrapolated Cell Count']       = df_all['Counts'] * spacing\n",
@@ -644,6 +648,10 @@
     "    # Merge all calculated metrics\n",
     "    dfs_to_merge = [df_counts, df_avg_area, df_avg_perimeter, df_avg_circularity, df_region_area]\n",
     "    df_all_calcs = functools.reduce(lambda left, right: pd.merge(left, right, on=groupby_column, how='outer'), dfs_to_merge)\n",
+    "\n",
+    "    # Replace NaN in numeric columns with 0\n",
+    "    numeric_cols = df_all_calcs.select_dtypes(include='number').columns\n",
+    "    df_all_calcs[numeric_cols] = df_all_calcs[numeric_cols].fillna(0)    \n",
     "\n",
     "    # Add injected/uninjected information\n",
     "    df_all_calcs_total = df_brainregions_injected.merge(\n",
@@ -751,6 +759,10 @@
     "    # Merge all metrics\n",
     "    dfs_to_merge = [df_counts, df_avg_area, df_avg_perimeter, df_avg_circularity, df_region_area]\n",
     "    df_all = functools.reduce(lambda l, r: pd.merge(l, r, on=parent_col, how='outer'), dfs_to_merge)\n",
+    "\n",
+    "    # Replace NaN in numeric columns with 0\n",
+    "    numeric_cols = df_all.select_dtypes(include='number').columns\n",
+    "    df_all[numeric_cols] = df_all[numeric_cols].fillna(0)\n",
     "\n",
     "    # Derived density metrics\n",
     "    df_all['Extrapolated Cell Count'] = df_all['Counts'] * spacing\n",
