--- a/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
+++ b/Notebooks/MCD_Microglial_Cell_Detector_Analysis.ipynb
@@ -564,6 +564,10 @@
     "        dfs_to_merge\n",
     "    )\n",
     "\n",
+    "    # Replace NaN in numeric columns with 0\n",
+    "    numeric_cols = df_all_calcs_merged.select_dtypes(include='number').columns\n",
+    "    df_all_calcs_merged[numeric_cols] = df_all_calcs_merged[numeric_cols].fillna(0)\n",
+    "\n",
     "    # Additional derived calculations\n",
     "    df_all_calcs_merged['Extrapolated Cell Count'] = df_all_calcs_merged['Counts'] * spacing\n",
     "    df_all_calcs_merged['Percentage IBA1 Positive Area'] = 100 * df_all_calcs_merged['Total Cell Area (μm²)'] / \\\n",
