--- a/Notebooks/pSynD_Phospho_Synuclein_Detector_Analysis.ipynb
+++ b/Notebooks/pSynD_Phospho_Synuclein_Detector_Analysis.ipynb
@@ -695,13 +695,17 @@
     "\n",
     "        # Count the number of inclusions per region\n",
     "        df_counts = df_A_type[groupby_column2].value_counts(sort=True) \\\n",
-    "                            .rename_axis('Merged area name').reset_index(name=A_type + ' Counts')\n",
+    "                        .rename_axis('Merged area name').reset_index(name=A_type + ' Counts')\n",
     "\n",
     "        # Merge with region areas and counts\n",
     "        df_merged_A_type = functools.reduce(\n",
     "            lambda left, right: pd.merge(left, right, on='Merged area name', how='outer'),\n",
     "            [df_region_areas_merged, df_stats, df_counts]\n",
     "        )\n",
+    "\n",
+    "        # Replace NaN in numeric columns with 0\n",
+    "        numeric_cols = df_merged_A_type.select_dtypes(include='number').columns\n",
+    "        df_merged_A_type[numeric_cols] = df_merged_A_type[numeric_cols].fillna(0)\n",
     "\n",
     "        # Derived calculations\n",
     "        df_merged_A_type[A_type + ' Percentage PSYN Positive Area'] = \\\n",
@@ -719,7 +723,7 @@
     "\n",
     "        # Drop intermediate per μm²/μm³ columns\n",
     "        df_merged_A_type.drop(columns=[A_type + ' Inclusions/Region Area (per μm²)',\n",
-    "                                        A_type + ' Inclusions/Region Volume (per μm³)'], inplace=True)\n",
+    "                                       A_type + ' Inclusions/Region Volume (per μm³)'], inplace=True)\n",
     "\n",
     "        # Define the column order dynamically for the current A_type\n",
     "        desired_order = [\n",
@@ -836,6 +840,10 @@
     "            lambda left, right: pd.merge(left, right, on='Merged area name', how='outer'),\n",
     "            [df_region_areas_merged, df_stats, df_counts]\n",
     "        )\n",
+    "\n",
+    "        # Replace NaN in numeric columns with 0\n",
+    "        numeric_cols = df_merged_O_type.select_dtypes(include='number').columns\n",
+    "        df_merged_O_type[numeric_cols] = df_merged_O_type[numeric_cols].fillna(0)\n",
     "\n",
     "        # Derived calculations\n",
     "        df_merged_O_type[O_type + ' Percentage PSYN Positive Area'] = \\\n",
